# MagicGUI

./: .gitignore  CMakeLists.txt  CMakeSettings.json
Docs/: Draw sequence
Inc/: BasicForm.h  CallbackChain.h  Font.h  Gridsubsystem.h  HDynamicArray.h  HIO.h  HLinux.h  HMath.h  HString.h  HWin32.h  RenderBuffer.h  Shader.h  Template.h  TextRenderer.h  Texture.h  ThemeManager.h  Widget.h  Window.h  dirent.h  fasttrigo.h  stb_image.h
Inc/Localization/: LocalizationManager.h
Inc/Themes/: Default.thm  ThemeDef.txt  ThemeManager.h
Inc/Widgets/: Button.h  Canvas.h  ClippedCanvas.h  ContextMenu.h  Image.h  Label.h  ScrollPanel.h  SlideButton.h  SlidePanel.h  TabPanel.h  WindowCanvas.h
Inc/google/: dense_hash_map.h  dense_hash_set.h  sparse_hash_map.h  sparse_hash_set.h  sparsetable.h
Inc/sparsehash/: dense_hash_map.h
Inc/sparsehash/internal/: densehashtable.h  sparseconfig.h
Src/: Application.cpp  BasicForm.cpp  Font.cpp  Gridsubsystem.cpp  HIO.cpp  HMath.cpp  HString.cpp  Linux.cpp  RenderBuffer.cpp  Shader.cpp  StaticAllocator.cpp  TextRenderer.cpp  Texture.cpp  Widget.cpp  WinBase.cpp  Window.cpp  Windows.cpp  fasttrigo.cpp
Src/Localization/: LocalizationManager.cpp
Src/Themes/: ThemeManager.cpp
Src/Widgets/: Button.cpp  Canvas.cpp  ClippedCanvas.cpp  Image.cpp  Label.cpp  ScrollPanel.cpp  SlideButton.cpp  SlidePanel.cpp  TabPanel.cpp  WindowCanvas.cpp
freetype-2.10.2/builds/: toplevel.mk
freetype-2.10.2/builds/unix/: config.status  freetype-config  freetype2.pc  libtool  unix-cc.mk  unix-def.mk
freetype-2.10.2/objs/: autofit.lo  bdf.lo  cff.lo  ftbase.lo  ftbbox.lo  ftbdf.lo  ftbitmap.lo  ftbzip2.lo  ftcache.lo  ftcid.lo  ftdebug.lo  ftexport.sym  ftfstype.lo  ftgasp.lo  ftglyph.lo  ftgxval.lo  ftgzip.lo  ftinit.lo  ftlzw.lo  ftmm.lo  ftotval.lo  ftpatent.lo  ftpfr.lo  ftstroke.lo  ftsynth.lo  ftsystem.lo  fttype1.lo  ftver.lo  ftwinfnt.lo  libfreetype.la  pcf.lo  pfr.lo  psaux.lo  pshinter.lo  psnames.lo  raster.lo  sfnt.lo  smooth.lo  truetype.lo  type1.lo  (+3 more)
freetype-2.10.2/objs/.libs/: libfreetype.lai
glew-2.1.0/: glew.pc
glfw-3.3.2/: CMakeLists.txt
glfw-3.3.2/include/GLFW/: glfw3.h
glfw-3.3.2/src/: internal.h  wgl_context.c  win32_window.c
